# schema-evolution-advisor

./: .gitignore  SECURITY_AUDIT.md  TODO.md  pyproject.toml
src/schema_evolution_advisor/: analyzer.py  cli.py  parser.py  report.py
tests/: test_analyzer.py  test_parser.py
tests/fixtures/: 001_safe_migration.py  002_cautious_migration.py  003_dangerous_migration.py
